update alumni roles

--- a/pages/members.html
+++ b/pages/members.html
@@ -105,7 +105,6 @@
                         <a href="https://www.linkedin.com/in/elad-amar/" target="_blank" class="member-name">Elad Amar</a>
                         <p>M.Sc. (2023)</p>
                         <p><b>Research Topic: </b> </p>
-                        <p><b>Currently:</b> </p>
                     </div>
                     <div class="student_box_alumni">
                         <div class="student_box_img">
@@ -114,7 +113,7 @@
                         <a href="" target="_blank" class="member-name">Ilan Git</a>
                         <p>M.Sc. (2022)</p>
                         <p><b>Research Topic: </b> </p>
-                        <p><b>Currently:</b> </p>
+                        <p><b>Currently:</b> Head of Data Science at BLST Security</p>
                     </div>
                     <div class="student_box_alumni">
                         <div class="student_box_img">
@@ -126,7 +125,7 @@
                         
                         <p>Ph.D (2021)</p>
                         <p><b>Research Topic: </b> </p>
-                        <p><b>Currently:</b> </p>
+                        <p><b>Currently:</b> ML/CV Algorithm Developer at Voyage81 </p>
                     </div>
                     <div class="student_box_alumni">
                         <div class="student_box_img">
@@ -135,7 +134,7 @@
                         <a href="#" class="member-name">Peleg Harel</a>
                         <p>M.Sc. (2020)</p>
                         <p><b>Research Topic: </b> </p>
-                        <p><b>Currently:</b> </p>
+                        <p><b>Currently:</b> Computer Vision Engineer at Snap Inc. </p>
                     </div>
                     <div class="student_box_alumni">
                         <div class="student_box_img">
@@ -144,7 +143,7 @@
                         <a href="#" class="member-name">Ben Vardi</a>
                         <p>M.Sc. (2020)</p>
                         <p><b>Research Topic: </b> </p>
-                        <p><b>Currently:</b> </p>
+                        <p><b>Currently:</b> Computer Vision Engineer at Snap Inc. </p>
                     </div>
                     <div class="student_box_alumni">
                         <div class="student_box_img">
@@ -155,7 +154,7 @@
                         <a href="https://www.roytoren.com/about" target="_blank" class="member-name">Roy Toren</a>
                         <p>M.Sc. (2022)</p>
                         <p><b>Research Topic: </b> </p>
-                        <p><b>Currently:</b> </p>
+                        <p><b>Currently:</b> Deep Learning Researcher at dataspan.ai</p>
                     </div>
                     <div class="student_box_alumni">
                         <div class="student_box_img">
@@ -166,7 +165,7 @@
                         <a href="http://www.boazarad.com/" target="_blank" class="member-name">Boaz Arad</a>
                         <p>Ph.D (2018)</p>
                         <p><b>Research Topic: </b> Hyperspectral Imaging</p>
-                        <p><b>Currently:</b> CTO at Voyage 81</p>
+                        <p><b>Currently:</b> Chief Vision Officer at ODDITY</p>
                     </div>
                     <div class="student_box_alumni">
                         <div class="student_box_img">
@@ -177,6 +176,7 @@
                         <a href="http://www.cs.bgu.ac.il/~dubie" target="_blank" class="member-name">Efrat Taig (Dubi)</a>
                         <p>Ph.D. (2018)</p>
                         <p><b>Research Topic: </b> Global Optimization with Gradient Heuristic</p>
+                        <p><b>Currently:</b> Head of Research and Al at Bria</p>
                     </div>
                     <div class="student_box_alumni">
                         <div class="student_box_img">
@@ -187,7 +187,7 @@
                         <a href="http://www.cs.bgu.ac.il/~barneaeh" target="_blank" class="member-name">Ehud Barnea</a>
                         <p>Ph.D. (2018)</p>
                         <p><b>Research Topic: </b> Object detection with contextual reasoning</p>
-                        <p><b>Currently:</b> Computer Vision Algorithms Researcher at Trax</p>
+                        <p><b>Currently:</b> Head of AI at Tasq.ai</p>
                     </div>
                     <div class="student_box_alumni">
                         <div class="student_box_img">
@@ -196,16 +196,16 @@
                         <a href="#" class="member-name">Shir Gur</a>
                         <p>M.Sc. (2018)</p>
                         <p><b>Research Topic: </b> A fully automated jigsaw puzzle solver</p>
-                        <p><b>Currently:</b> Ph.D. student at TAU</p>
+                        <p><b>Currently:</b> CTO at Mentee Robotics</p>
                     </div>
                     <div class="student_box_alumni">
                         <div class="student_box_img">
                             <img src="./assets/members/students-pic-nir2.jpg" alt="Gal Nir member image">
                         </div>
-                        <a href="#" class="member-name">Gal Nir</a>
+                        <a href="#" class="member-name">Gal Nir-Cohen</a>
                         <p>M.Sc. (2016)</p>
                         <p><b>Research Topic: </b> Multi-inducer grouping for curve completion</p>
-                        <p><b>Currently:</b> Ph.D. student at BGU</p>
+                        <p><b>Currently:</b> UX Expert and Usability Specialist at Cognit</p>
                     </div>
                     <div class="student_box_alumni">
                         <div class="student_box_img">
@@ -216,7 +216,7 @@
                         <a href="http://www.cs.bgu.ac.il/~ilankad/" target="_blank" class="member-name">Ilan Kadar</a>
                         <p>Ph.D. (2014)</p>
                         <p><b>Research Topic: </b> From Perceptual Relations to Scene Gist Recognition</p>
-                        <p><b>Currently:</b> Sr. Research Scientist and Team Leader at <a href="http://www.cortica.com/" target="_blank">Cortica</a></p>
+                        <p><b>Currently:</b> VP AI & Automotive at Nexar</p>
                     </div>
                     <div class="student_box_alumni">
                         <div class="student_box_img">
@@ -227,7 +227,7 @@
                         <a href="http://www.cs.bgu.ac.il/faculty/person/mokeiche.html" target="_blank" class="member-name">Alik Mokeichev</a>
                         <p>Ph.D. (2013)</p>
                         <p><b>Research Topic: </b> The geometry of color and its interactions in early and mid-level vision</p>
-                        <p><b>Currently:</b> Computer Vision Algorithms Researcher at <a href="http://eyesight-tech.com/" target="_blank">eyeSight Technologies</a></p>
+                        <p><b>Currently:</b> Computer Vision and Deep Learning Expert</a></p>
                     </div>
                     <div class="student_box_alumni">
                         <div class="student_box_img">
@@ -238,7 +238,7 @@
                         <a href="http://www.cs.bgu.ac.il/~adato/" target="_blank" class="member-name">Yair Adato</a>
                         <p>Ph.D. (2013)</p>
                         <p><b>Research Topic: </b> Shape from Specular Flow</p>
-                        <p><b>Currently:</b> Chief Engineering Officer at <a href="http://www.trax-tech.com/" target="_blank">Trax</a></p>
+                        <p><b>Currently:</b> CEO at BRIA AI</a></p>
                     </div>
                     <div class="student_box_alumni">
                         <div class="student_box_img">
@@ -260,7 +260,7 @@
                         <a href="http://www.cs.bgu.ac.il/faculty/person/dolevp.html" target="_blank" class="member-name">Dolev Pomeranz</a>
                         <p>M.Sc. (2012)</p>
                         <p><b>Research Topic: </b> A fully automated greedy square jigsaw puzzle solver</p>
-                        <p><b>Currently:</b> Chief Software Architect at <a href="http://www.trax-tech.com/" target="_blank">Trax </a></p>
+                        <p><b>Currently:</b> Senior Director of AI at Gong </a></p>
                     </div>
                     <div class="student_box_alumni">
                         <div class="student_box_img">
@@ -271,7 +271,7 @@
                         <a href="http://www.math.tau.ac.il/research/rami.ben-ari/" target="_blank" class="member-name">Guy Ben-Yosef</a>
                         <p>Ph.D. (2012)</p>
                         <p><b>Research Topic: </b> Curve Completion in the Tangent Bundle</p>
-                        <p><b>Currently:</b> Postdoc at <a href="http://www.csail.mit.edu/user/4775"> MIT CSAIL </a></p>
+                        <p><b>Currently:</b> Principal Scientist at GE Research</p>
                     </div>
                     <div class="student_box_alumni">
                         <div class="student_box_img">
@@ -282,7 +282,7 @@
                         <a href="http://www.math.tau.ac.il/research/rami.ben-ari/" target="_blank" class="member-name">Rami Ben Ari</a>
                         <p>Research Associate (2010)</p>
                         <p><b>Research Topic: </b> Fast and Robust Visual Tracking</p>
-                        <p><b>Currently:</b> Researcher at <a href="http://www.ibm.com/" target="_blank">IBM research</a> in Haifa</p>
+                        <p><b>Currently:</b> Senior Research Scientist and Technical Lead at OriginAI</p>
                     </div>
                     <div class="student_box_alumni">
                         <div class="student_box_img">
@@ -291,7 +291,7 @@
                         <a href="#" class="member-name">Liana Diesendruck</a>
                         <p>M.Sc. (2010)</p>
                         <p><b>Research Topic: </b> Overt and Covert Attention with Curvature-based Perceptual Singularities</p>
-                        <p><b>Currently:</b> Researcher at <a href="http://isda.ncsa.illlinois.edu" target="_blank">NCSA</a></p>
+                        <p><b>Currently:</b> Director of Engineering at Bluevine</a></p>
                     </div>
                     <div class="student_box_alumni">
                         <div class="student_box_img">
@@ -302,7 +302,7 @@
                         <a href="http://www.cs.bgu.ac.il/faculty/person/katzhad.html" target="_blank" class="member-name">Hadassa Daltrophe</a>
                         <p>M.Sc. (2009)</p>
                         <p><b>Research Topic: </b> Curvature-based Statistics of Edge Co-occurence</p>
-                        <p><b>Currently:</b> Ph.D. student at <a href="http://www.bgu.ac.il/" target="_blank">BGU</a></p>
+                        <p><b>Currently:</b> Head of Communication Systems & Cyber track, Software Engineering at SCE</p>
                     </div>
                     <div class="student_box_alumni">
                         <div class="student_box_img">
@@ -311,7 +311,7 @@
                         <a href="#" class="member-name">Maor Mishkin</a>
                         <p>M.Sc. (2008)</p>
                         <p><b>Research Topic: </b> Hierarchical Multitarget Tracking</p>
-                        <p><b>Currently:</b> Team Leader at <a href="http://www.dvtel.com/" target="_blank">DVTel</a></p>
+                        <p><b>Currently:</b> Senior Product Manager at Teledyne FLIR</p>
                     </div>
                     <div class="student_box_alumni">
                         <div class="student_box_img">
@@ -320,7 +320,7 @@
                         <a href="#" class="member-name">Moran Hirsh</a>
                         <p>M.Sc. (2007)</p>
                         <p><b>Research Topic: </b> Compact Texture Representation via Scale-space Dynamics</p>
-                        <p><b>Currently:</b> Software Engineer at <a href="http://www.Mellanox.com">Mellanox</a></p>
+                        <p><b>Currently:</b> Senior Software Engineer at <a href="http://www.Mellanox.com">Mellanox</a></p>
                     </div>
                 </div>
             </div>
