--- a/pages/header.html
+++ b/pages/header.html
@@ -18,11 +18,8 @@
                 <li><a href="pages/senior-projects.html">Senior Projects</a></li>
                 <li>
                     <div class="theme-toggle" id="theme-toggle" onclick="toggleTheme()">
-                        <div class="toggle-switch">
-                            <i class="fas fa-sun"></i>
-                            <i class="fas fa-moon"></i>
-                            <div class="toggle-circle"></div>
-                        </div>
+                        <img src="/ICVL/assets/dark.png" alt="Dark Mode Icon" class="theme-icon" id="dark-icon" style="display: none;">
+                        <img src="/ICVL/assets/light.png" alt="Light Mode Icon" class="theme-icon" id="light-icon">
                     </div>
                 </li>
             </ul>
