UI fixes according to Ohads feedback

--- a/pages/header.html
+++ b/pages/header.html
@@ -12,7 +12,7 @@
                 <li><a href="pages/research.html">Research</a></li>
                 <li><a href="pages/publications.html">Publications</a></li>
                 <li><a href="pages/seminar.html">Seminar</a></li>
-                <li><a href="pages/gallery.html">Gallery</a></li>
+<!--                <li><a href="pages/gallery.html">Gallery</a></li>-->
                 <li><a href="pages/resources.html">Resources</a></li>
                 <li><a href="pages/grad-positions.html">Grad Positions</a></li>
                 <li><a href="pages/senior-projects.html">Senior Projects</a></li>
