UI fixes according to Ohads feedback

--- a/pages/grad-positions.html
+++ b/pages/grad-positions.html
@@ -11,11 +11,13 @@
 <div id="header-placeholder"></div>
 <div class="main-container">
 <main id="content">
-<div class="grad-positions">
-<h1>Graduate student and postdoc positions</h1>
-<p>We always look for excellent graduate students or postdocs to join the lab, (including interns from the Dkalim, Ashalim, and Eitan programs). If any of the vision sciences catches your imagination and research is your passion, please do <a href="mailto:iCVL@cs.bgu.ac.il" role="link">contact us</a> to tell us about yourself and learn more about the lab and its research. Research positions for the 2020/2021 academic year are described in this page. Unless stated differently, most projects offer opportunities at all of the M.Sc., Ph.D., and Postdoc levels.</p>
+    <section class="grad-positions">
 
-<h2>Active Research</h2>
+<h1 >Graduate student and postdoc positions:</h1>
+<p>We always look for excellent graduate students or postdocs to join the lab, (including interns from the Dkalim, Ashalim, and Eitan programs). If any of the vision sciences catches your imagination and research is your passion, please do <a href="mailto:iCVL@cs.bgu.ac.il" role="link">contact us</a> to tell us about yourself and learn more about the lab and its research. Research positions for the 2020/2021 academic year are described in this page. Unless stated differently, most projects offer opportunities at all of the M.Sc., Ph.D., and Postdoc levels.</p>
+    </section>
+<section class="grad-positions">
+<h1>Active Research:</h1>
 
 <h3>Algorithmic puzzle solving for computational archeology</h3>
 <p>Automatic solving of jigsaw puzzles has been receiving increasing interest in the computational vision community, and our lab has been <a href="http://www.cs.bgu.ac.il/~icvl/lab_projects/automatic-jigsaw-puzzle-solving/" role="link">pushing the abilities of such algorithms to new fronts</a>. Following this initial success (and a follow up senior project on robotic puzzle solving) we will set to study important (and yet unexplored) extensions of the problem, as well as important applications, in particular in computational cultural heritage (and more specifically in computational archeology). Strong background in computer science, algorithms, and computational geometry are a plus. <strong>For details please contact: <a href="mailto:ben-shahar@cs.bgu.ac.il" role="link" class="contact">Prof. Ohad Ben-Shahar</a></strong></p>
@@ -26,7 +28,7 @@
 <h3>Computational visual contour completion</h3>
 <p>Visual completion is a fundamental perception capacity of human vision and a crucial function for computer vision. <a href="http://www.cs.bgu.ac.il/~icvl/lab_projects/curve-completion-in-the-tangent-bundle/" role="link">Previous computational research in the iCVL</a> has explored the visual contour completion problem in a biologically-inspired and perceptual-consistent fashion, pushing a unique approach that considers the problem not in the image plane but rather in a mathematical space that abstracts the primary visual cortex. Candidate interested in this problem will study both computational aspects and perceptual issues. No special background is needed, but previous experience with tools from analysis, differential equations, differential geometry and numerical analysis, as well as background in visual perception are a plus. <strong>For details please contact: <a href="mailto:ben-shahar@cs.bgu.ac.il" role="link" class="contact">Prof. Ohad Ben-Shahar</a></strong></p>
 
-<h4>Behavioral exploration of Contour Completion</h4>
+<h3>Behavioral exploration of Contour Completion</h3>
 <ul>
     <li><strong>The role of the occluder on amodal completion:</strong> <a href="http://www.cs.bgu.ac.il/~icvl/lab_projects/curve-completion-in-the-tangent-bundle/" role="link">Previous perceptual research in the iCVL</a> has explored the effect of various visual cues on the grouping of the inducers, and in this research project we would like to explore the role of the <em>occluder</em> on shape of the computed contour. In particular, we are interested to understand if the shading pattern on the occluder has a role in the perceptual completion outcome.</li>
     <li><strong>Shape completion in neglect patients:</strong> Visual completion is a fundamental perceptual capacity that allows human observers experience whole and coherent objects from visual fragments. Does this capacity depends on the integrity of spatial vision? In this project we will explore this question by testing neglect patients who suffer from a particular spatial deficit related to their spatial visual field. Key in this project is the formulation of special stimuli in which normal and neglect patients are predicted to make different completions.</li>
@@ -47,15 +49,16 @@
 
 <h3>Deep learning for inverse problems in computer vision</h3>
 <p>Ill-posed inverse problems in vision (or other domains) are one-to-many problems where the I/O mapping is under-determined. In some very basic sense, the vision problem as a whole is one grand inverse problem. For decades now the computer vision community has been addressing such problems using regularized optimization – a fancy terms to say more constraints are needed to single our certain solutions over others. Could deep learning, the new king in town, do better? In this research project we will explore this topic in depth and tackle some of the most challenging vision problems. <strong>For details please contact: <a href="mailto:ben-shahar@cs.bgu.ac.il" role="link" class="contact">Prof. Ohad Ben-Shahar</a></strong></p>
+</section>
 
-<h2>Assigned/In Progress</h2>
+<section class="grad-positions"><h1>Assigned/In Progress:</h1>
 
 <h3>Computational eye care</h3>
 <p>Computational healthcare is exploding and related to vision is of course eye care. Both big data and algorithmic tools provide opportunities like never before. In collaboration with clinicians and scientists from <a href="https://hospitals.clalit.co.il/soroka/he/med-units/Ophthalmology/Pages/ophthalmology.aspx" role="link">Soroka’s Eye Department</a>, we set to study and develop novel methods for diagnosis and treatment of various eye and vision conditions to aid eye care professionals. Research likely to involve both basic and applied science and significant parts are related to the eye movements exploration topic below. <strong>For details please contact: <a href="mailto:ben-shahar@cs.bgu.ac.il" role="link" class="contact">Prof. Ohad Ben-Shahar</a></strong></p>
 
 <h3>Computational visual astrophysics</h3>
 <p>Astrophysics, now more than ever, is a scientific field relying heavily on the processing of visual or visual-like information coming in vast volumes from various sensors on earth and in space. In collaboration with data scientists and astrophysicists from the <a href="https://www.njit.edu/" role="link">NJIT</a> and <a href="https://www.nasa.gov/" role="link">NASA</a>, we set to study aspects of the solar system (in particular, <a href="https://www.swpc.noaa.gov/" role="link">space weather</a>) using computational vision and machine learning tools and various research projects are available that relate to finding patterns in solar and space data, forecasting solar eruptions and other space weather events. <strong>For details please contact: <a href="mailto:ben-shahar@cs.bgu.ac.il" role="link" class="contact">Prof. Ohad Ben-Shahar</a></strong></p>
- </div>
+</section>
     </main>
     </div>
 <div id="footer-placeholder"></div>
