--- a/pages/publications.html
+++ b/pages/publications.html
@@ -56,7 +56,7 @@ in scripts.js until we will have api key to fetch the publications dynamically
                     </div>
                     <div class="publication-year">
                         <h2 onclick="toggleVisibility('year-2023')">2023</h2>
-                        <ul class="public" id="year-2023" style="display: none;"><li>M. Lellouch and O. Ben-Shahar,
+                        <ul class="public" id="year-2023" style="display: block;"><li>M. Lellouch and O. Ben-Shahar,
 					<strong>
 				    <a href="Publications/2023-Lellouch_anbd_Ben_Shahar-Fixational_Eye_Movements_as_Bio_Markers_of_Visual_Acuity.pdf">
 					Fixational Eye Movements as Bio Markers of Visual Acuity
@@ -89,7 +89,7 @@ in scripts.js until we will have api key to fetch the publications dynamically
                     </div>
                     <div class="publication-year">
                         <h2 onclick="toggleVisibility('year-2022')">2022</h2>
-                        <ul class="public" id="year-2022" style="display: none;"><li>S. Givon<sup>+</sup>,  M. Samina<sup>+</sup>,  O. Ben-Shahar<sup>*</sup>,  and  R.Segev<sup>*</sup>,
+                        <ul class="public" id="year-2022" style="display: block;"><li>S. Givon<sup>+</sup>,  M. Samina<sup>+</sup>,  O. Ben-Shahar<sup>*</sup>,  and  R.Segev<sup>*</sup>,
 					<strong>
 				    <!--a href=""-->
 					From Fish on Dry Land to New Insights on Navigation Mechanisms in Animals,
@@ -174,7 +174,7 @@ in scripts.js until we will have api key to fetch the publications dynamically
                     </div>
                     <div class="publication-year">
                         <h2 onclick="toggleVisibility('year-2021')">2021</h2>
-                        <ul class="public" id="year-2021" style="display: none;"><li>P. Harel and O. Ben-Shahar,
+                        <ul class="public" id="year-2021" style="display: block;"><li>P. Harel and O. Ben-Shahar,
 					<strong>
 				    <a href="https://arxiv.org/abs/2008.07644">
 					 Pictorial and apictorial polygonal jigsaw puzzles: The lazy caterer model, properties, and solvers
@@ -236,7 +236,7 @@ in scripts.js until we will have api key to fetch the publications dynamically
                     </div>
                     <div class="publication-year">
                         <h2 onclick="toggleVisibility('year-2020')">2020</h2>
-                        <ul class="public" id="year-2020" style="display: none;"><li>P. Harel and O. Ben-Shahar,
+                        <ul class="public" id="year-2020" style="display: block;"><li>P. Harel and O. Ben-Shahar,
 					<strong>
 				    <a href="https://arxiv.org/abs/2008.07644">
 					Lazy caterer jigsaw puzzles: Models, properties, and a mechanical system-based solver
@@ -305,7 +305,7 @@ in scripts.js until we will have api key to fetch the publications dynamically
                     </div>
                     <div class="publication-year">
                         <h2 onclick="toggleVisibility('year-2019')">2019</h2>
-                        <ul class="public" id="year-2019" style="display: none;"><li>E. Vinepinsky, L. Cohen, O. Ben-Shahar, O. Donchin, and R. Segev,
+                        <ul class="public" id="year-2019" style="display: block;"><li>E. Vinepinsky, L. Cohen, O. Ben-Shahar, O. Donchin, and R. Segev,
 					<strong>
 				    <!--a href=""-->
 					Representation of space in the goldfish brain
@@ -365,7 +365,7 @@ in scripts.js until we will have api key to fetch the publications dynamically
                     </div>
                     <div class="publication-year">
                         <h2 onclick="toggleVisibility('year-2018')">2018</h2>
-                        <ul class="public" id="year-2018" style="display: none;"><li>E. Barnea and O. Ben-Shahar,
+                        <ul class="public" id="year-2018" style="display: block;"><li>E. Barnea and O. Ben-Shahar,
 					<strong>
 				    <a href="Publications/2018-Barnea_and_Ben_Shahar-Contextual_Object_Detection_with_a_Few_Rekevant_Neighbors.pdf">
 					 Contextual Object Detection with a Few Relevant Neighbors
@@ -422,7 +422,7 @@ in scripts.js until we will have api key to fetch the publications dynamically
                     </div>
                     <div class="publication-year">
                         <h2 onclick="toggleVisibility('year-2017')">2017</h2>
-                        <ul class="public" id="year-2017" style="display: none;"><li>B. Arad, and O. Ben-Shahar,
+                        <ul class="public" id="year-2017" style="display: block;"><li>B. Arad, and O. Ben-Shahar,
 					<strong>
 				    <a href="Publications/2017-Arad_and_Ben_Shahar-Filter_Selection_for_Hyperspectral_Estimation.pdf">
 					Filter Selection for Hyperspectral Estimation
@@ -454,7 +454,7 @@ in scripts.js until we will have api key to fetch the publications dynamically
                     </div>
                     <div class="publication-year">
                         <h2 onclick="toggleVisibility('year-2016')">2016</h2>
-                        <ul class="public" id="year-2016" style="display: none;"><li>B. Arad and O. Ben-Shahar,
+                        <ul class="public" id="year-2016" style="display: block;"><li>B. Arad and O. Ben-Shahar,
 					<strong>
 				    <a href="Publications/2016-Arad_and_Ben_Shahar-Sparse_Recovery_of_Hyperspectral_Signal_from_Natural_RGB_Images.pdf">
 					Sparse Recovery of Hyperspectral Signal from Natural RGB Images
@@ -499,7 +499,7 @@ in scripts.js until we will have api key to fetch the publications dynamically
                     </div>
                     <div class="publication-year">
                         <h2 onclick="toggleVisibility('year-2015')">2015</h2>
-                        <ul class="public" id="year-2015" style="display: none;"><li>J. Orlowski, C. Beissel, F. Rohn, Y. Adato, H. Wagner, and O. Ben-Shahar,
+                        <ul class="public" id="year-2015" style="display: block;"><li>J. Orlowski, C. Beissel, F. Rohn, Y. Adato, H. Wagner, and O. Ben-Shahar,
 					<strong>
 				    <a href="Publications/2015-Orlowski_Beissel_Rohn_Adato_Wagner_and_Ben_Shahar-Visual_Pop_Out_in_Barn_Owls_Human_Like_Behavior_in_the_Avian_Brain.pdf">
 					Visual pop-out in barn owls: Human-like behavior in the avian brain,
@@ -557,7 +557,7 @@ in scripts.js until we will have api key to fetch the publications dynamically
                     </div>
                     <div class="publication-year">
                         <h2 onclick="toggleVisibility('year-2014')">2014</h2>
-                        <ul class="public" id="year-2014" style="display: none;"><li>R. Mairon and O. Ben-Shahar,
+                        <ul class="public" id="year-2014" style="display: block;"><li>R. Mairon and O. Ben-Shahar,
 					<strong>
 				    <a href="Publications/2014-Meiron_and-Ben_Shahar-A_Closer_Look_at_Context_From_Coxels_to_the_Contextual_Emergence_of_Object_Saliency.pdf">
 					 A Closer Look at Context: From Coxels to the Contextual Emergence of Object Saliency
@@ -623,7 +623,7 @@ in scripts.js until we will have api key to fetch the publications dynamically
                     </div>
                     <div class="publication-year">
                         <h2 onclick="toggleVisibility('year-2013')">2013</h2>
-                        <ul class="public" id="year-2013" style="display: none;"><li>M. Ben-Tov, I. Kopilevich, O. Donchin, O. Ben Shahar, C. Giladi, and R. Segev,
+                        <ul class="public" id="year-2013" style="display: block;"><li>M. Ben-Tov, I. Kopilevich, O. Donchin, O. Ben Shahar, C. Giladi, and R. Segev,
 					<strong>
 				    <a href="Publications/2013-Ben_Tov_Kopilevich_Donchin_Ben_Shahar_Giladi_and_Segev-Visual_Receptive_Field_Properties_of_Cells_in_the_Optic_Tectum-of_the_Archer_Fish.pdf">
 					 Visual receptive field properties of cells in the optic tectum of the archer fish
@@ -657,7 +657,7 @@ in scripts.js until we will have api key to fetch the publications dynamically
                     </div>
                     <div class="publication-year">
                         <h2 onclick="toggleVisibility('year-2012')">2012</h2>
-                        <ul class="public" id="year-2012" style="display: none;"><li>I. Kadar  and O. Ben-Shahar,
+                        <ul class="public" id="year-2012" style="display: block;"><li>I. Kadar  and O. Ben-Shahar,
 					<strong>
 				    <a href="Publications/2012-Kadar_and_Ben_Shahar-A_Perceptual_Paradigm_and_Psychophysical_Evidence_for_Hierarchy_in_Scene_Gist_Processing.pdf">
 					A perceptual paradigm and psychophysical evidence for hierarchy in scene gist processing
@@ -707,7 +707,7 @@ in scripts.js until we will have api key to fetch the publications dynamically
                     </div>
                     <div class="publication-year">
                         <h2 onclick="toggleVisibility('year-2011')">2011</h2>
-                        <ul class="public" id="year-2011" style="display: none;"><li>W. Harmening, J. Orlowski, O. Ben-Shahar, and H. Wagner,
+                        <ul class="public" id="year-2011" style="display: block;"><li>W. Harmening, J. Orlowski, O. Ben-Shahar, and H. Wagner,
 				    <a href="Publications/2011-Harmening_Orlowski_Ben_Shahar_and_Wagner-Overt_Attention_Towards_Oriented_Objects_in_Free_Viewing_Barn_Owls.pdf" target="_blank">
 					Overt attention towards oriented objects in free viewing barn owls
 					</a>,
@@ -775,7 +775,7 @@ in scripts.js until we will have api key to fetch the publications dynamically
                     </div>
                     <div class="publication-year">
                         <h2 onclick="toggleVisibility('year-2010')">2010</h2>
-                        <ul class="public" id="year-2010" style="display: none;"><li>A. Mokeichev, Segev, R., and O. Ben-Shahar,
+                        <ul class="public" id="year-2010" style="display: block;"><li>A. Mokeichev, Segev, R., and O. Ben-Shahar,
 				    <a href="Publications/2010-Mokeichev_Segev_and_Ben_Shahar-Orientation_Saliency_without_Visual_Cortex_and_Target_Selection_in_Archer_Fish.pdf" target="_blank">
 					Orientation saliency without visual cortex and target selection in archer fish
 					</a>,
@@ -843,7 +843,7 @@ in scripts.js until we will have api key to fetch the publications dynamically
                     </div>
                     <div class="publication-year">
                         <h2 onclick="toggleVisibility('year-2009')">2009</h2>
-                        <ul class="public" id="year-2009" style="display: none;"><li>A. Ben-Simon, O. Ben-Shahar, and R. Segev,
+                        <ul class="public" id="year-2009" style="display: block;"><li>A. Ben-Simon, O. Ben-Shahar, and R. Segev,
 				    <a href="Publications/2009-Ben_Simon_Ben_Shahar_and_Segev-Measuring_and_Tracking_Eye_Movements_of_a_Behaving_Archer_Fish_by_Real_Time_Stereo_Vision.pdf" target="_blank">
 					Measuring and Tracking Eye Movements of a Behaving Archer Fish by Real-Time Stereo Vision
 					</a>,
@@ -874,7 +874,7 @@ in scripts.js until we will have api key to fetch the publications dynamically
                     </div>
                     <div class="publication-year">
                         <h2 onclick="toggleVisibility('year-2008')">2008</h2>
-                        <ul class="public" id="year-2008" style="display: none;"><li>G. Ben-Yosef and O. Ben-Shahar,
+                        <ul class="public" id="year-2008" style="display: block;"><li>G. Ben-Yosef and O. Ben-Shahar,
 				    <a href="Publications/2008-Ben_Yosef_and_Ben_Shahar_Curvature_Based_Perceptual_Singularities_and_Texture_Saliency_with_Early_Vision_Mechanisms.pdf" target="_blank">
 					Curvature-based perceptual singularities and texture saliency with early visual mechanisms
 					</a>,
@@ -906,7 +906,7 @@ in scripts.js until we will have api key to fetch the publications dynamically
                     </div>
                     <div class="publication-year">
                         <h2 onclick="toggleVisibility('year-2007')">2007</h2>
-                        <ul class="public" id="year-2007" style="display: none;"><li>O. Ben-Shahar, B.J. Scholl, and S.W. Zucker,
+                        <ul class="public" id="year-2007" style="display: block;"><li>O. Ben-Shahar, B.J. Scholl, and S.W. Zucker,
 				    <a href="Publications/2007-Ben_Shahar_Scholl_and_Zucker-Attention_Segregation_and_Textons_Bridging_the_Gap_Between_Object_Based_Attention_and_Texton_Based_Seregation.pdf" target="_blank">
 					Attention, segregation, and textons: Bridging the gap between object-based attention and texton-based segregation
 					</a>,
@@ -938,7 +938,7 @@ in scripts.js until we will have api key to fetch the publications dynamically
                     </div>
                     <div class="publication-year">
                         <h2 onclick="toggleVisibility('year-2006')">2006</h2>
-                        <ul class="public" id="year-2006" style="display: none;"><li>O. Ben-Shahar,
+                        <ul class="public" id="year-2006" style="display: block;"><li>O. Ben-Shahar,
 				    <a href="Publications/2006-Ben_Shahar-Visual_Saliency_and_Texture_Segregation_without_Feature_Gradient.pdf" target="_blank">
 					Visual saliency and texture segregation without feature gradient
 					</a>,
@@ -966,7 +966,7 @@ in scripts.js until we will have api key to fetch the publications dynamically
                     </div>
                     <div class="publication-year">
                         <h2 onclick="toggleVisibility('year-2005')">2005</h2>
-                        <ul class="public" id="year-2005" style="display: none;"><li>O. Ben-Shahar and S.W. Zucker,
+                        <ul class="public" id="year-2005" style="display: block;"><li>O. Ben-Shahar and S.W. Zucker,
 				    <a href="Publications/2005-Ben_Shahar_and_Zucker-Good_Continuation_of_General_2D_Visual_Features_Dual_Harmonic_Models_and_Computational_Inference.pdf" target="_blank">
 					Good continuation of general 2D visual features: Dual harmonic models and computational inference
 					</a>,
@@ -978,7 +978,7 @@ in scripts.js until we will have api key to fetch the publications dynamically
                     </div>
                     <div class="publication-year">
                         <h2 onclick="toggleVisibility('year-2004')">2004</h2>
-                        <ul class="public" id="year-2004" style="display: none;"><li>O. Ben-Shahar and S.W. Zucker,
+                        <ul class="public" id="year-2004" style="display: block;"><li>O. Ben-Shahar and S.W. Zucker,
 				    <a href="Publications/2004-Ben_Shahar_and_Zucker-Hue_Geometry_and_Horizontal_Connections.pdf" target="_blank">
 					Hue geometry and horizontal connections
 					</a>,
@@ -996,7 +996,7 @@ in scripts.js until we will have api key to fetch the publications dynamically
                     </div>
                     <div class="publication-year">
                         <h2 onclick="toggleVisibility('year-2003')">2003</h2>
-                        <ul class="public" id="year-2003" style="display: none;"><li>O. Ben-Shahar and S.W. Zucker,
+                        <ul class="public" id="year-2003" style="display: block;"><li>O. Ben-Shahar and S.W. Zucker,
 				    <a href="Publications/2003-Ben_Shahar_and_Zucker-The_Perceptual_Organization_of_Texture_Flow_A_Contextual_Inference_Approach.pdf" target="_blank">
 					The perceptual organization of texture flow: A contextual inference approach
 					</a>,
@@ -1025,7 +1025,7 @@ in scripts.js until we will have api key to fetch the publications dynamically
                     </div>
                     <div class="publication-year">
                         <h2 onclick="toggleVisibility('year-2002-and-Earlier')">2002 and Earlier</h2>
-                        <ul class="public" id="year-2002-and-Earlier" style="display: none;"><li>O. Ben-Shahar, P. Huggins, and S.W. Zucker,
+                        <ul class="public" id="year-2002-and-Earlier" style="display: block;"><li>O. Ben-Shahar, P. Huggins, and S.W. Zucker,
 				    <strong>On Computing Visual Flows with Boundaries: The Case of Shading and Edges</strong>,
 					<a href="http://www.springerlink.com/content/cfrega4yf0kc/?p=2b4ab1588fb245efb0e2959cc6e92128&amp;pi=2871" target="_blank">Lecture Notes in Computer Science 2525</a>, pp. 189-198, 2002.</li><li>O. Ben-Shahar, P. Huggins, and S.W. Zucker,
 				    <a href="Publications/2002-Ben_Shahar_Huggins_and_Zucker-On_Computing_Visual_Flows_with_Boundaries_The_Case_of_Shading_and_Edges.pdf" target="_blank">
