--- a/pages/footer.html
+++ b/pages/footer.html
@@ -4,7 +4,7 @@
         <p>Fax: +972-8-647-7975</p>
         <p>Email: ICVL@cs.bgu.ac.il</p>
         <p>Director: Prof. Ohad Ben-Shahar</p>
-        <p>Seminar Coordinator: Ilan Git</p>
+        <p>Seminar Coordinator: Brahan Wassan</p>
         <p>Web Master: Tal Alfi</p>
     </div>
     <div class="address">
