--- a/pages/header.html
+++ b/pages/header.html
@@ -18,7 +18,7 @@
                 <li><a href="pages/senior-projects.html">Senior Projects</a></li>
                 <li>
                     <div class="theme-toggle" id="theme-toggle" onclick="toggleTheme()">
-                        <img src="/ICVL/assets/dark.png" alt="Dark Mode Icon" class="theme-icon" id="dark-icon" style="display: none;">
+                        <img src="/ICVL/assets/dark.png" alt="Dark Mode Icon" class="theme-icon" id="dark-icon">&nbsp;
                         <img src="/ICVL/assets/light.png" alt="Light Mode Icon" class="theme-icon" id="light-icon">
                     </div>
                 </li>
