fixes per ohads feedback

--- a/pages/footer.html
+++ b/pages/footer.html
@@ -1,11 +1,9 @@
 <footer>
     <div class="contact-info">
-        <p>Phones: +972-8-647-7818/9</p>
-        <p>Fax: +972-8-647-7975</p>
-        <p>Email: ICVL@cs.bgu.ac.il</p>
-        <p>Director: Prof. Ohad Ben-Shahar</p>
-        <p>Seminar Coordinator: Brahan Wassan</p>
-        <p>Web Master: Tal Alfi</p>
+        <p>Email: <a href="mailto:ICVL@cs.bgu.ac.il">ICVL@cs.bgu.ac.il</a></p>
+        <p>Director: <a href="mailto:obs@bgu.ac.il">Prof. Ohad Ben-Shahar</a></p>
+        <p>Seminar Coordinator: <a href="mailto:brahan@post.bgu.ac.il">Brahan Wassan</a></p>
+        <p>Web Master: <a href="mailto:alfit@post.bgu.ac.il">Tal Alfi</a></p>
     </div>
     <div class="address">
         <p>Address: The interdisciplinary Computational Vision Laboratory (ICVL), Computer Science Department, Ben-Gurion University, P.O.Box 653, Beer-Sheva 84105, Israel</p>
