--- a/pages/header.html
+++ b/pages/header.html
@@ -1,7 +1,8 @@
 <header>
-    <div class="logo">
+    <div class="logo-container">
         <a href="index.html">
-            <img src="/ICVL/assets/logo_icvl.png" alt="ICVL Logo">
+            <img src="/ICVL/assets/logo_icvl.png" id="logo" alt="ICVL Logo" class="logo">
+            <img src="/ICVL/assets/textual.png" id="text" alt="ICVL Text Logo" class="text">
         </a>
     </div>
     <div>
